[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.5.2"
async_once = "0.2.6"
csrf = "0.4.1"
data-encoding = "2.4.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tera = { version = "1.19.1", default-features = false }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = { version = "0.3.6" }

[features]
getrandom = []
